fix(turbo): 🐛 Sequenced Collections 集合操作 get(0) 切换为 getFirst